--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,16 @@
 } 
 
 body{
-  background-color: tan; 
+  background-color: tan;  /* or tan ? */
   display: block;
+  margin: 0px;
   /* margin: 0px; ....for no background all around */
 }
 
 
 /* Navbar */
 nav {
-    background-color: #ce8653;
+    background-color: #ce8653; /*originally #ce8653 */
     padding: 15px;
     position: sticky;
     top: 0px;
@@ -29,7 +30,7 @@ ul {
 ul li {
     display: inline-block; /* horizontally aligned */
     padding-right: 14px;
-    background-color: #844728;
+    background-color: #844728;      /*originally #844728*/
     border: 1px solid white;
     padding: 10px;
     margin-top: 7px;
@@ -51,7 +52,7 @@ ul li:hover:not(.active) {
     border: 1px solid #844728;
 }
 
-/* active pending */
+/* active pending to fix? */
 .active {
   padding: 10px;
   padding-right: 14px;
@@ -153,8 +154,9 @@ header {
 
 /* Intro */
 .welcome {
-  color: #844728;
+  color: #2c0906;
   text-align: center;
+  line-height: 1.5;
   margin-left: 150px;
   margin-right: 150px;
   margin-bottom: 75px;
@@ -168,10 +170,14 @@ header {
   color: white;
   text-shadow: 3px 0px 5px #844728;
   /* margin-bottom: 75px; */
-  border: 3px solid white;
-  background-color: #ce8653;
+  border: 3px solid #2c0906;
+  background-color: #ce8653; /*option wine red #8b111e*/
   padding-bottom: 50px;
 }
+
+/* .featured-p {
+  font-variant-caps: small-caps;
+} */
 
 .polaroid {
   float: left;
@@ -186,7 +192,7 @@ header {
 .caption {
   text-align: center;
   padding: 10px 20px;
-  color: #844728;
+  color: #2c0906;
   text-shadow: none; /*1px 0px 5px #844728;*/
 }
 
@@ -201,3 +207,30 @@ footer {
     background-color: #ce8653;
     clear: both;
 }
+
+
+/* About Page */ 
+.about-image {
+  float: left;
+  margin-right: 20px;
+}
+
+.about-description {
+  color: #2c0906;
+  line-height: 1.5;
+  margin-bottom: 75px;
+}
+
+#first, #last {
+  text-align: center;
+}
+
+#middle {
+  text-indent: 33px;
+}
+
+#about {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+/* End of About Page */
