--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,7 @@ ul li:hover:not(.active) {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 110px;
+    min-width: 103px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1; /* helped keep nav over hero */
   }
@@ -163,16 +163,23 @@ header {
 }
 /* End of Intro */
 
+hr {
+  border: 1px dotted #844728;
+}
 
 /* Featured Trip */
-.featured {
+.featured-title {
   text-align: center;
   color: white;
-  text-shadow: 3px 0px 5px #844728;
+  text-shadow: 1px 0px 5px #2c0906;
   /* margin-bottom: 75px; */
   border: 3px solid #2c0906;
   background-color: #ce8653; /*option wine red #8b111e*/
-  padding-bottom: 50px;
+  padding-bottom: 10px;
+  margin-top: 25px;
+  margin-left: 520px;
+  margin-right: 520px;
+
 }
 
 /* .featured-p {
@@ -202,11 +209,69 @@ header {
   display: table;
 }
 
+/* Playlist/Song and Video of the Week */
+.recommendation {
+  margin-top: 75px;
+}
+.audio-rec {
+  float: left;
+  width: 48%;
+  height: 500px;
+  text-align: center;
+  background-color: white;
+  margin: 10px
+}
+
+/* .vertical-line {
+  border-left: 2px solid white;
+  height: 500px;
+  position: absolute;
+  left: 50%;
+  margin-left: -3px;
+  /* top: 0; 
+  margin-bottom: 15px;
+} */
+
+.video-rec {
+  float: right;
+  width: 48%;
+  height: 500px;
+  text-align: center;
+  background-color: white;
+  margin: 10px;
+}
+
+
+/* Qoute of the Week */
+.quote {
+  color: #2c0906;
+  text-align: center;
+  line-height: 1.2;
+  background-color: burlywood;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  clear: both;
+}
+/* End of Quote of the Week */
+
+
 /* Footer */
 footer {
     background-color: #ce8653;
+    text-align: center;
+    /* color:  */
     clear: both;
 }
+
+/* .footer-nav {
+  
+} */
+
+.footer-links {
+  padding: 10px;
+  text-decoration: none;
+}
+/* End of Footer Page */
 
 
 /* About Page */ 
@@ -234,3 +299,68 @@ footer {
   margin-right: 30px;
 }
 /* End of About Page */
+
+
+/* Contact Page */
+.contact-heading {
+  text-align: center;
+  color: #2c0906;
+  margin-bottom: 55px;
+}
+
+input[type=text], textarea {    /* no space between input and opening bracket for form to show properly */ 
+  width: 100%;
+  padding: 12px;
+  border: 1px solid rgb(155, 147, 147);
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {   /* Style Submit button */
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {    /* Style Submit button on hover */
+  background-color: #45a049;
+  /* opacity: 0.8; */
+}
+
+.contact-container {
+  border: 5px solid #844728;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  margin-left: 250px;
+  margin-right: 250px;
+  margin-bottom: 75px;
+}
+/* End of Contact Page */
+
+
+/* Extra --- Blog, Gallery, Community Page */
+.hero-image-coming-soon {
+  /* "linear-gradient" to add a darken background effect to the image (___.jpg) to make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/hero-canyon-river.jpg");
+  height: 455px; /*500px*/
+  /* Position and center the image to scale well on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+#header-dropdown {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-bottom: 0px;
+}
+/* End og Etra Pages */
