--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ ul {
 
 ul li {
     display: inline-block; /* horizontally aligned */
-    padding-right: 14px;
+    /* padding-right: 14px; */
     background-color: #844728;      /*originally #844728*/
     border: 1px solid white;
     padding: 10px;
@@ -65,7 +65,7 @@ ul li:hover:not(.active) {
 
 /* The dropdown container */
 .dropdown {
-    float: rightt;
+    float: right;
     overflow: hidden;
   }
 
@@ -85,20 +85,20 @@ ul li:hover:not(.active) {
 .dropdown:hover .dropbtn {
     background-color: white;
     color: #844728;
-  }
+}
   
   /* Dropdown content (hidden by default) */
-  .dropdown-content {
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 103px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1; /* helped keep nav over hero */
-  }
+    z-index: 1; /* helps keep nav over hero */
+}
   
   /* Tabs inside the dropdown */
-  .dropdown-content a {
+.dropdown-content a {
     float: none;
     color: white;
     background-color: #844728;
@@ -106,18 +106,18 @@ ul li:hover:not(.active) {
     text-decoration: none;
     display: block;
     text-align: center;
-  }
+}
   
   /* Background color to dropdown tabs on hover */
-  .dropdown-content a:hover {
+.dropdown-content a:hover {
     background-color: tan;
-  }
+}
   
   /* Shows the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
+.dropdown:hover .dropdown-content {
     display: block;
     overflow: hidden;
-  }
+}
 /* End of Navbar */
 
 
@@ -158,7 +158,7 @@ header {
   text-align: center;
   line-height: 1.5;
   background-color: burlywood;
-  padding-top: 15px;
+  padding-top: 5px;
   padding-bottom: 15px;
   margin-bottom: 75px;
 }
@@ -188,10 +188,6 @@ hr {
 
 }
 
-/* .featured-p {
-  font-variant-caps: small-caps;
-} */
-
 .polaroid {
   float: left;
   width: 32.5%;
@@ -216,17 +212,40 @@ hr {
   display: table;
 }
 
-.featured-description {
+.featured-description{
   float: left;
   width: 50%;
-  
+}
+
+.featured-description i {
+  color: #844728;
+}
+
+.featured-description h3 {
+  text-align: center;
+  color: #2c0906;
+  font-variant-caps: small-caps;
+}
+
+.featured-description p {
+  text-indent: 33px;
+  line-height: 1.3;
+}
+
+.featured-description iframe {
+  margin-left: 50px;
+  margin-top: 30px;
 }
 
 .row-two {
   content: "";
   clear: both;
   display: table;
+  margin-left: 28px;
+  margin-right: 40px;
+  margin-bottom: 25px;
 }
+/* End of Featured Trip */
 
 
 /* Playlist/Song and Video of the Week */
@@ -238,7 +257,7 @@ hr {
   width: 48%;
   height: 500px;
   text-align: center;
-  background-color: white;
+  background-color: #844728;
   margin: 10px
 }
 
@@ -257,7 +276,7 @@ hr {
   width: 48%;
   height: 500px;
   text-align: center;
-  background-color: white;
+  background-color: #844728;
   margin: 10px;
 }
 
