--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 
 /* Fonts */
 /* font-family: 'DM Serif Display', serif; */
+/* font-family: 'Lato', sans-serif; */
 
 
 body{
@@ -19,11 +20,12 @@ body{
 
 /* Navbar */
 nav {
-    background-color: #ce8653; /*originally #ce8653 */
+    background-color: #ce8653; 
     padding: 15px;
     position: sticky;
     top: 0px;
     z-index: 1;
+    font-family: 'Lato', sans-serif;
 }
 
 /* unordered list - Navigation Bar */
@@ -35,7 +37,7 @@ ul {
 ul li {
     display: inline-block; /* horizontally aligned */
     /* padding-right: 14px; */
-    background-color: #844728;      /*originally #844728*/
+    background-color: #844728;
     border: 1px solid white;
     padding: 10px;
     margin-top: 7px;
@@ -135,7 +137,7 @@ header {
 }
 
 .hero-image {
-  /* "linear-gradient" to add a darken background effect to the image (___.jpg) - makes text easier to read */
+  /* "linear-gradient" adds a darken background effect to the image (___.jpg) - makes text easier to read */
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/hero-canyon-river.jpg");
   height: 455px; /*500px*/
   /* Position and center the image to scale well on all screens */
@@ -166,11 +168,13 @@ header {
   padding-top: 5px;
   padding-bottom: 15px;
   margin-bottom: 75px;
+  font-family: 'DM Serif Display', serif;
 }
 
 .welcome p {
   margin-left: 150px;
   margin-right: 150px;
+  font-family: 'Lato', sans-serif;
 }
 /* End of Intro */
 
@@ -187,11 +191,18 @@ hr {
   text-shadow: 1px 0px 5px #2c0906;
   /* margin-bottom: 75px; */
   border: 3px solid #2c0906;
-  background-color: #ce8653; /*option wine red #8b111e*/
+  background-color: #ce8653; 
   padding-bottom: 10px;
   margin-top: 25px;
   margin-left: 520px;
   margin-right: 520px;
+  font-family: 'DM Serif Display', serif;
+  letter-spacing: 2px;
+}
+
+.featured-title p {
+  letter-spacing: 1.3px;
+  font-family: 'Lato', sans-serif;
 }
 
 .polaroid {
@@ -210,6 +221,8 @@ hr {
   padding: 10px 20px;
   color: #2c0906;
   text-shadow: none; /*1px 0px 5px #844728;*/
+  /* font-family: 'DM Serif Display', serif; */
+  font-family: 'Lato', sans-serif;
 }
 
 .row::after {
@@ -231,23 +244,27 @@ hr {
   text-align: center;
   color: #2c0906;
   font-variant-caps: small-caps;
+  font-family: 'DM Serif Display', serif;
+  letter-spacing: 1px;
 }
 
 .featured-description p {
   text-indent: 33px;
-  line-height: 1.3;
+  line-height: 1.2;
+  color: #2c0906;
+  font-family: 'Lato', sans-serif;
 }
 
 .featured-description iframe {
-  margin-left: 50px;
-  margin-top: 30px;
+  margin-left: 40px;
+  margin-top: 25px;
 }
 
 .row-two {
   content: "";
   clear: both;
   display: table;
-  margin-left: 28px;
+  margin-left: 35px;
   margin-right: 40px;
   margin-bottom: 25px;
 }
@@ -261,29 +278,37 @@ hr {
 .audio-rec {
   float: left;
   width: 48.5%;
-  height: 515px;
+  height: 530px;
   text-align: center;
   color: white;
   background-color: #844728;
   margin: 10px;
   margin-bottom: 40px;
+  /* font-family: 'DM Serif Display', serif;
+  letter-spacing: 2px; */
 }
 
 .video-rec {
-  float: right;
+  float: left;
   width: 48.5%;
-  height: 515px;
+  height: 530px;
   text-align: center;
   color: white;
   background-color: #844728;
   margin: 10px;
   margin-bottom: 40px;
+  /* font-family: 'DM Serif Display', serif;
+  letter-spacing: 2px; */
 }
 
 .audio-rec p, .video-rec p {
-  color: rgb(248, 227, 198);
+  /* color: rgb(248, 227, 198); */
+  color: white;
   padding: 10px;
   line-height: 1.1;
+  font-family: 'Lato', sans-serif;
+  text-align: justify;
+  text-indent: 33px;
 }
 /* End of Playlist/Song, Video Recommendation */
 
@@ -298,6 +323,13 @@ hr {
   padding-bottom: 15px;
   margin-bottom: 40px;
   clear: both;
+  font-family: 'DM Serif Display', serif;
+  letter-spacing: 1px;
+}
+
+.quote p {
+  font-family: 'Lato', sans-serif;
+  letter-spacing: normal;
 }
 /* End of Quote of the Week */
 
@@ -310,6 +342,7 @@ footer {
     text-align: center;
     color: #2c0906;
     clear: both;
+    font-family: 'DM Serif Display', serif;
 }
 
 .fa-brands {
@@ -323,6 +356,7 @@ footer {
   text-decoration: none;
   color: #2c0906;
   background-color: tan;
+  font-family: 'Lato', sans-serif;
 }
 /* End of Footer Page */
 
@@ -335,8 +369,9 @@ footer {
 
 .about-description {
   color: #2c0906;
-  line-height: 1.5;
+  line-height: 1.3;
   margin-bottom: 75px;
+  font-family: 'Lato', sans-serif;
 }
 
 #first, #last {
@@ -359,6 +394,7 @@ footer {
   text-align: center;
   color: #2c0906;
   margin-bottom: 55px;
+  font-family: 'Lato', sans-serif;
 }
 
 input[type=text], textarea {    /* no space between input and opening bracket for form to show properly */ 
@@ -416,4 +452,4 @@ input[type=submit]:hover {    /* Style Submit button on hover */
     display: block;
     margin-bottom: 0px;
 }
-/* End og Etra Pages */
+/* End of Extra Pages */
