added two periods before forward slash on line 142 and 441 image

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ header {
 
 .hero-image {
   /* "linear-gradient" adds a darken background effect to the image (___.jpg) - makes text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/hero-canyon-river.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/hero-canyon-river.jpg");
   height: 500px; /*455px*/
   /* Position and center the image to scale well on all screens */
   background-position: center;
@@ -438,7 +438,7 @@ input[type=submit]:hover {    /* Style Submit button on hover */
 /* Extra --- Blog, Gallery, Community Page */
 .hero-image-coming-soon {
   /* "linear-gradient" to add a darken background effect to the image to make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/hero-canyon-river.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/hero-canyon-river.jpg");
   height: 500px; /* or 455px */
   /* Positions and centers the image to scale well on all screens */
   background-position: center;
