removed periods on line 142 and 441 bfore image

--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ header {
 
 .hero-image {
   /* "linear-gradient" adds a darken background effect to the image (___.jpg) - makes text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/hero-canyon-river.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero-canyon-river.jpg");
   height: 500px; /*455px*/
   /* Position and center the image to scale well on all screens */
   background-position: center;
@@ -410,7 +410,7 @@ input[type=text], textarea {    /* no space between input and opening bracket fo
 }
 
 input[type=submit] {   /* Style Submit button */
-  background-color: #04AA6D;
+  background-color: #844728;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -419,7 +419,7 @@ input[type=submit] {   /* Style Submit button */
 }
 
 input[type=submit]:hover {    /* Style Submit button on hover */
-  background-color: #45a049;
+  background-color: #ce8653;
   /* opacity: 0.8; */
 }
 
@@ -438,7 +438,7 @@ input[type=submit]:hover {    /* Style Submit button on hover */
 /* Extra --- Blog, Gallery, Community Page */
 .hero-image-coming-soon {
   /* "linear-gradient" to add a darken background effect to the image to make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/hero-canyon-river.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("img/hero-canyon-river.jpg");
   height: 500px; /* or 455px */
   /* Positions and centers the image to scale well on all screens */
   background-position: center;
